--- a/src/Components/board.scss
+++ b/src/Components/board.scss
@@ -19,12 +19,10 @@
     }
 }
 
-
-
-
-
 sk- {
-
+    &brush{
+        pointer-events: none;
+    }
     &menu {
         display: flex;
         width: 100%;
