--- a/src/Components/board.scss
+++ b/src/Components/board.scss
@@ -3,7 +3,26 @@
     margin: 0;
 }
 
+#toastContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    height: 100vh;
+    width: 30%;
+    min-width: 300px;
+
+    z-index: 999;
+    pointer-events: none;
+
+    >* {
+        pointer-events: auto;
+    }
+}
 
 #blockArtNavbar {
     display: flex;
@@ -19,16 +38,65 @@
     }
 }
 
+button {
+    box-shadow: 0px 1px 0px 0px #fff6af;
+    background: linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+    background-color: #ffec64;
+    border-radius: 6px;
+    border: 1px solid #ffaa22;
+    display: inline-block;
+    cursor: pointer;
+    color: #333333;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #ffee66;
+
+    &:hover {
+        background: linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+        background-color: #ffab23;
+    }
+
+    &:active {
+        position: relative;
+        top: 1px;
+    }
+
+}
+
 sk- {
-    &brush{
+    &toast-message {
+        margin-top: 1rem;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        background: #f3ad7e;
+
+        >p {
+            padding: 1rem;
+
+        }
+
+        >button {
+            border: none;
+
+            padding: 1rem;
+        }
+    }
+
+    &brush {
         pointer-events: none;
     }
+
     &menu {
         display: flex;
         width: 100%;
         padding: 1rem 0;
 
-        > sk-menu-item {
+        >sk-menu-item {
             display: block;
             margin: 0 1rem;
             padding: 0.6rem;
@@ -36,9 +104,11 @@ sk- {
             background: #343434;
             color: rgb(192, 232, 235);
             cursor: pointer;
+
             &:hover {
                 opacity: 0.8;
             }
+
             &.active {
                 background: #f3ad7e;
             }
@@ -50,19 +120,23 @@ sk- {
 
         background: pink;
         transition: all 100ms ease;
+
         // border-radius: 25%;
         &:hover {
             border-radius: 25%;
             cursor: pointer;
         }
+
         &.active {
             // background: pink;
             opacity: 0.2;
+
             &.pallette-color {
                 box-shadow: inset 0 0 10px black;
             }
         }
-        > svg {
+
+        >svg {
             pointer-events: none;
         }
     }
@@ -79,12 +153,52 @@ sk- {
     }
 
 
-    &board{
+    &board {
         display: flex;
         flex-direction: column;
         width: min-content;
         // gap: 1px;
 
         margin: 0 auto;
+    }
+    &modal {
+        display: none;
+
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        height: 100vh;
+        width: 100%;
+
+        >aside {
+            width: 50%;
+            min-width: 300px;
+            min-height: 300px;
+            
+            background-color: #fff6af;
+            
+            display: flex;
+            flex-direction: column;
+
+            > nav {
+                display: flex;
+                justify-content: end;
+
+                padding: 0.4rem;
+            }
+            > div {
+                display: flex;
+                flex-grow: 2;
+          
+                * {
+                    width:  100%;
+                }
+            }
+        }
     }
 }
